list paggination added and summary changes
